--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,8 +59,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - asset/images/login.png
-    - asset/images/forget_password.png
+    - asset/images/
+    - asset/fonts/
 
 
 
