--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.0.16
   pin_code_fields: ^8.0.1
+  clipboard: ^0.1.3
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +62,7 @@ flutter:
   uses-material-design: true
   assets:
     - asset/images/
+    - asset/svg/
     - asset/fonts/
 
 
