--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_svg: ^2.0.16
   pin_code_fields: ^8.0.1
   clipboard: ^0.1.3
+  image_picker: ^1.0.8
+
 
 dev_dependencies:
   flutter_test:
