--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   pin_code_fields: ^8.0.1
   clipboard: ^0.1.3
   image_picker: ^1.0.8
+  url_launcher: ^6.3.1
 
 
 dev_dependencies:
