--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   clipboard: ^0.1.3
   image_picker: ^1.0.8
   url_launcher: ^6.3.1
+  shared_preferences: ^2.5.1
 
 
 dev_dependencies:
